--- a/pages/social/main.css
+++ b/pages/social/main.css
@@ -24,7 +24,7 @@ font-family: 'Roboto', sans-serif; */
     background: #fff;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
     color: black;
-    margin: 0.7%;
+    margin: 0.8%;
 }
 #btnright{
     transition: 200ms;
@@ -33,15 +33,15 @@ font-family: 'Roboto', sans-serif; */
     right: 0;
     position: absolute;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     font-size: 25px;
     width: 20%;
-    height: 80%;
+    height: 70%;
     border-radius: 25px;
     background: #fff;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    margin: 0.4%;
+    margin: 0.6%;
     margin-right: 1%;
     border: none;
 }
@@ -49,7 +49,6 @@ font-family: 'Roboto', sans-serif; */
     margin: 5%;
 }
 #btnright i{
-    position: absolute;
     z-index: 99;
     top: 0;
     right: 0;
@@ -57,12 +56,11 @@ font-family: 'Roboto', sans-serif; */
     justify-content: center;
     align-items: center;
     font-size: 35px;
-    width: 20%;
-    height: 100%;
     border-radius: 25px;
     background: #fff;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     color: black;
+    padding: 2%;
 }
 #btnright:hover{
     cursor: pointer;
