--- a/pages/acess/main.css
+++ b/pages/acess/main.css
@@ -11,7 +11,7 @@ font-family: 'Roboto', sans-serif; */
     position: absolute;
     bottom: 0;
     font-size: 15px;
-    margin: 3%;
+    margin-bottom: 18%;
     text-decoration: underline;
     color: blue;
     cursor: pointer;
@@ -139,14 +139,17 @@ body{
     width: 50%;
     height: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+.sign_box.ativo > div > *{
+    margin: 20px;
 }
 .login_box.ativo{
     position: relative;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 30%;
@@ -155,6 +158,9 @@ body{
     font-size: 20px;
     border-radius: 25px;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+}
+.login_box.ativo > *{
+    margin: 5%;
 }
 .sign_box nav{
     width: 90%;
