--- a/pages/chat/main.css
+++ b/pages/chat/main.css
@@ -71,6 +71,7 @@ i{
     position: relative;
 }
 #messages li span{
+    user-select: none;
     font-size: 11px;
     color: #777;
     display: block;
@@ -98,3 +99,15 @@ i{
     font-size: 35px;
     width: 10%;
 }
+#messages::-webkit-scrollbar {
+    width: 10px;
+}
+
+#messages::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+  }
+  
+  #messages::-webkit-scrollbar-track {
+    background-color: #f9f9f9;
+  }
