--- a/pages/fitness/main.css
+++ b/pages/fitness/main.css
@@ -20,11 +20,103 @@ html,body{
     width: 100vw;
     height: 100vh;
 }
-header{
+/* HEADER */
+.menu{
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+    z-index: 1;
+    position: sticky;
+    display: flex;
+    flex-direction: row;
     width: 100%;
-    height: 10vh;
-    background: var(--base1);
+    height:10vh;
+    background: linear-gradient(30deg,var(--base1), var(--base2));
 }
+#btnmenu{
+    transition: 100ms;
+    margin: 0 20px 0 20px;
+    display: flex;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    font-size: 30px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+#btnmenu:hover{
+    cursor: pointer;
+    box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+    font-size: 35px;
+}
+.leftside{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 33%;
+    height: 100%;
+    align-items: center;
+}
+.leftside nav{
+    display: flex;
+    justify-content: space-around;
+    padding: 1%;
+    align-items: center;
+    background: white;
+    width: 85%;
+    border-radius: 25px;
+}
+.leftside nav div{
+    cursor: pointer;
+    user-select: none;
+    transition: 500ms;
+    padding: 10px;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    width: 70px;
+    background: linear-gradient(70deg,var(--base1), var(--base2));
+}
+.leftside nav div:hover{
+    width: 160px;
+}
+.leftside nav div i{
+    font-size: 50px;
+}
+.leftside nav div span{
+    margin-left: 10px;
+}
+.leftside.ativo{
+    justify-content: flex-end;
+}
+.midside{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 33%;
+    height: 100%;
+}
+.rightside{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    width: 33%;
+    height: 100%;
+}
+.rightside > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-weight: bold;
+}
+.rightside > div span{
+    padding: 3px;
+}
+
+
 h1,h2,h3{
     font-family: 'Poppins',sans-serif;
 }
