--- a/pages/fitness/main.css
+++ b/pages/fitness/main.css
@@ -120,9 +120,6 @@ html,body{
 h1,h2,h3{
     font-family: 'Poppins',sans-serif;
 }
-main{
-    height: 300vh;
-}
 main .rosto{
     display: flex;
     justify-content: center;
@@ -203,86 +200,13 @@ main .rosto .align-items div h3{
 }
 .exercicios{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.255);
-    z-index: 5;
-}
-.exercicios h2{
-    font-size: 50px;;
-}
-.exercicios .container{
-    display: flex;
     justify-content: center;
     align-items: center;
-    width: 60%;
-    padding: 1%;
-    background: #fff;
-    border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.255);
-}
-.exercicios .container input{
-    padding: 1%;
-    font-size: 30px;
-    width: 92%;
-    outline: none;
-    border: none;
-}
-.exercicios .container input:focus{
-    border-bottom: 2px solid var(--base1);
-}
-.exercicios .container input:not(:placeholder-shown) {
-    border-bottom: 2px solid var(--base1);
-}
-.exercicios .container i{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 70px;
-    height: 70px;
-    font-size: 50px;
-    border-radius: 50%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.255);
-}
-.exercicios section{
-    transition: 500ms;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: center;
     width: 100%;
-    height: 70%;
-    background: var(--base1);
-    overflow: auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.255);
-}
-.exercicios section .card{
-    cursor: pointer;
-    user-select: none;
-    transition: 500ms;
-    overflow: hidden;
-    width: 20%;
-    height: 50px;
-    background: #fff;
-    padding: 0.5%;
-    margin: 4% 1% 0% 1%;
-    border-radius: 20px;
-    text-align: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.255);
-}
-.exercicios section .card h1{
-    font-size: 25px;
-}
-.exercicios section .card:hover{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    height: 200px;
+    background: blue;
 }
 footer{
+    background: red;
     width: 100%;
     height: 30vh;
 }
