--- a/pages/fitness/main.css
+++ b/pages/fitness/main.css
@@ -129,6 +129,7 @@ main .rosto{
     background:url('../../resources/assets/fitness/background.png');
     background-size: 100%;
     box-shadow: 0 0 100px black inset;
+    background-attachment: fixed;
 }
 main .rosto .align-items{
     user-select: none;
@@ -161,7 +162,7 @@ main .rosto .align-items div h3{
 .sobre .align-items{
     background: #fff;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     width: 80%;
     height: 100%;
@@ -185,28 +186,139 @@ main .rosto .align-items div h3{
     height: 15%;
 }
 .sobre .align-items .container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
     padding: 2%;
     width: 30%;
-    height: 75%;
-
+    height: 55%;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.2) inset,0 0 30px rgba(0, 0, 0, 0.2);
 }
 .sobre .align-items .container h2{
     font-size: 30px;
-    height: 15%;
+    height: 20%;
 }
 .sobre .align-items .container p{
+    height: 80%;
     text-align: justify;
     font-size: 20px;
+}
+
+.sobre .align-items .container#f1{
+    background-image: url('../../resources/assets/fitness/figure1.png');
+    background-size: 110%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.sobre .align-items .container#f2{
+    background-image: url('../../resources/assets/fitness/figure2.png');
+    background-size: 90%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.sobre .align-items .container#f3{
+    background-image: url('../../resources/assets/fitness/figure3.png');
+    background-size: 110%;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .exercicios{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
     width: 100%;
-    background: blue;
+    height: 500px;
+    background: var(--base2);
+}
+.exercicios > h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    padding: 1%;
+    margin: 1%;
+    text-align: center;
+    width: 90%;
+    margin: 0 5% 0 5%;
+    border-radius: 25px;
+    color: #fff;
+    box-shadow: 5px 10px 15px rgba(0, 0, 0, 0.196);
+    background: var(--base1);
+}
+.exercicios > span{
+    transition: 500ms;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    font-size: 90px;
+    width: 5%;
+    color: #fff;
+}
+.exercicios > span:hover{
+    font-size: 100px;
+    color: black;
+    cursor: pointer;
+}
+.exercicios #items-here{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 90%;
+}
+.exercicios #items-here .card{
+    user-select: none;
+    flex-direction: column;
+    width: 30%;
+    height: 300px;
+    padding: 20px;
+    background-color: var(--base1);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+    color: white;
+    border-radius: 25px;
+}
+.exercicios #items-here .card:hover{
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+}
+.card.inv{
+    display: none;
+}
+.card.flex{
+    display: flex;
 }
 footer{
-    background: red;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: var(--base1);
     width: 100%;
     height: 30vh;
+}
+footer img{
+    width: 250px;
+}
+footer .lista{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 25%;
+    height: 90%;
+    font-size: 20px;
+}
+footer .lista > *{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #000;
+    margin: 2%;
+}
+footer .lista a:hover{
+    color: rgb(0, 94, 255);
+}
+footer .lista i{
+    font-size: 30px;
 }
