--- a/pages/calculadora/main.css
+++ b/pages/calculadora/main.css
@@ -21,6 +21,9 @@ font-family: 'Roboto', sans-serif; */
 body{
     overflow-x: hidden;
 }
+.inative{
+    display: none;
+}
 .menu{
     background: var(--cor2);
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
@@ -116,14 +119,13 @@ body{
 .rightside > div span{
     padding: 3px;
 }
-
 #screen_main{
     flex-direction: column;
     display: flex;
     justify-content: start;
     align-items:center;
     width: 100vw;
-    height: 190vh;
+    height: 300vh;
     background: url('../../resources/assets/FundoSocial.png');
     background-size: 20%;
 }
@@ -134,7 +136,7 @@ body{
     padding: 20px;
     font-size: 35px;
 }
-#screen_main span{
+#screen_main .inputcn span{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -146,7 +148,7 @@ body{
     color: #fff;
     cursor: pointer;
 }
-#screen_main span:hover{
+#screen_main  .inputcn span:hover{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 #screen_main input:focus{
@@ -163,24 +165,15 @@ body{
     height: 150px;
     background: #fff;
 }
-#screen_infos{
+.infos{
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 1000px;
+    height: 600px;
+    animation: entra 2s;
 }
-.inative{
-    display: none;
-}
-.infos1{
-    width: 100%;
-    height: 500px;
-    background: red;
-    animation: entra 1s;
-}
-.infos2{
-    width: 100%;
-    height: 500px;
-    background:blue;
-    animation: entra2 1s;
+.anm{
+    animation: entra2 2s
 }
 
 @keyframes entra {
@@ -198,4 +191,40 @@ body{
     100%{
         transform: translateX(0%);
     }
+}
+#screen_infos{
+    width: 100%;
+    height: 1200px;
+}
+#screen_infos div section{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 20px;
+    width: 90%;
+    height: 90%;
+    background: #fff;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    border-radius: 25px;
+}
+#screen_infos div section h2{
+    font-size: 35px;
+    text-align: center;
+    width: 100%;
+    height: 65px;
+}
+#screen_infos div section div{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    width: 25%;
+    height: 80%;
+    background: var(--cor2);
+    border-radius: 25px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+#screen_infos div section div img{
+    border-radius: 25px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
