MEGA COMMIT filtros prontos

--- a/public/main.css
+++ b/public/main.css
@@ -861,3 +861,9 @@ body{
     cursor: pointer;
     box-shadow: 0 0 5px black inset;
 }
+.logoHome{
+    width: 10%;
+}
+.logoHome:hover{
+    width: 30%;
+}
