--- a/pages/calculadora/main.css
+++ b/pages/calculadora/main.css
@@ -228,3 +228,51 @@ body{
     border-radius: 25px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
+#logohere{
+    transition: 500ms;
+    width: 20%;
+}
+#logohere:hover{
+    cursor: pointer;
+    width: 23%;
+    filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.3));
+}
+footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: var(--cor2);
+    width: 100%;
+    height: 30vh;
+}
+footer img{
+    width: 250px;
+}
+footer .lista{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 25%;
+    height: 90%;
+    font-size: 20px;
+}
+footer .lista h3{
+    font-weight: bold;
+    font-size: 30px;
+}
+footer .lista > *{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-decoration: none;
+    color: #000;
+    margin: 2%;
+    width: 50%;
+}
+footer .lista a:hover{
+    color: rgb(98, 112, 236);
+}
+footer .lista i{
+    font-size: 30px;
+}
