--- a/pages/fitness/main.css
+++ b/pages/fitness/main.css
@@ -21,6 +21,15 @@ html,body{
     height: 100vh;
 }
 /* HEADER */
+#logohere{
+    transition: 500ms;
+    width: 20%;
+}
+#logohere:hover{
+    cursor: pointer;
+    width: 23%;
+    filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.3));
+}
 .menu{
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
     z-index: 1;
@@ -142,6 +151,7 @@ main .rosto .align-items div{
     width: 55%;
     background: var(--base2);
     color: white;
+    border-radius: 25px;
 }
 main .rosto .align-items div h1{
     font-size: 70px;
@@ -308,16 +318,21 @@ footer .lista{
     height: 90%;
     font-size: 20px;
 }
+footer .lista h3{
+    font-weight: bold;
+    font-size: 30px;
+}
 footer .lista > *{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     text-decoration: none;
     color: #000;
     margin: 2%;
+    width: 50%;
 }
 footer .lista a:hover{
-    color: rgb(0, 94, 255);
+    color: rgb(98, 112, 236);
 }
 footer .lista i{
     font-size: 30px;
