--- a/pages/calculadora/main.css
+++ b/pages/calculadora/main.css
@@ -39,8 +39,8 @@ body{
     transition: 100ms;
     margin: 0 20px 0 20px;
     display: flex;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     font-size: 30px;
     background-color: white;
@@ -65,7 +65,7 @@ body{
 .leftside nav{
     display: flex;
     justify-content: space-around;
-    padding: 1%;
+    padding: 0.5%;
     align-items: center;
     background: white;
     width: 85%;
@@ -81,6 +81,7 @@ body{
     align-items: center;
     overflow: hidden;
     width: 70px;
+    color: #fff;
     background: linear-gradient(70deg,var(--cor2), var(--base2));
 }
 .leftside nav div:hover{
