--- a/pages/profile/main.css
+++ b/pages/profile/main.css
@@ -80,7 +80,7 @@ body{
     height: 200px;
     background: white;
     border-radius: 50%;
-    border: 1px solid black;
+    border: 5px solid var(--cor2);
 }
 .profile_screen > section .profile_image:hover::after{
     cursor: pointer;
@@ -89,7 +89,7 @@ body{
     height: 100%;
     position: absolute;
     content: "";
-    background-image: url("http://localhost:3333/resources/assets/Edit.png");
+    background-image: url("http://localhost:3000/resources/assets/Edit.png");
     background-repeat: no-repeat;
     background-position:center;
     background-size: 50%;
@@ -245,11 +245,20 @@ body{
     flex-direction: column;
     width: 50%;
     height: 100%;
-    border: 1px  solid black;
+    /* background: url("../../resources/assets/FundoSocial.png") ; */
+    background-size: 50%;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.174) inset;
 }
 .profile_screen section .bottom .imc > div{
     width: 100%;
     height: 50%;
+}
+.profile_screen section .bottom  .imc > label{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 100%;
+    background: red;
 }
 .profile_screen section .bottom .imc .imc-infos{
     display: flex;
@@ -265,11 +274,16 @@ body{
     margin-bottom: 3%;
 }
 .profile_screen section .bottom .imc .imc-infos div{
-    width: 100%;
+    width: 80%;
     font-size: 25px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    background: var(--cor2);
+    margin: 5px;
+    padding: 10px;
+    border-radius: 5px;
+    color: white;
 }
 .profile_screen section .bottom .imc .imc-infos input{
     width: 70%;
@@ -285,6 +299,7 @@ body{
     border-radius: 25px;
     background: linear-gradient( 80deg ,var(--cor2),rgb(5, 155, 165));
     border: 1px solid whitesmoke;
+    color: #fff;
 }
 .profile_screen section .bottom .imc .imc-infos button:hover{
     cursor: pointer;
@@ -315,6 +330,7 @@ body{
     font-size: 25px;
     border-radius: 25px;
     background: var(--cor2);
+    color: white;
 }
 #sendDirect{
     border: none;
@@ -345,6 +361,7 @@ body{
     background: linear-gradient(120deg ,var(--cor2),rgb(5, 155, 165));
 }
 .imc-img-div{
+    transition: 2s;
     position: relative;
     display: flex;
     justify-content: center;
@@ -355,4 +372,11 @@ body{
     transform-origin: bottom;
     position: absolute;
     bottom: 50px;
+}
+#imchere{
+    border-radius: 20px;
+    padding: 20px;
+    font-size: 40px;
+    background: var(--cor2);
+    color: #fff;
 }
