--- a/public/main.css
+++ b/public/main.css
@@ -130,7 +130,7 @@ body{
 /* carrosel */
 .container-slider{
     display: flex;
-    background-color: red;
+    background-color: white;
     height: 90vh;
     width: 100%;
     align-items: center;
@@ -146,31 +146,38 @@ body{
 }
 
 .slider{
+    background-color: var(--cor2);
     opacity: 0;
     transition: opacity .2s;
     position: absolute;
     width: 100%;
+    height: 85vh;
+    border-radius: 1em;
 }
 
 .on{
     opacity: 1;
 }
 
-.slider img{
-    width: 25%;
+.quad{
+    
 }
 
 #prev-button, #next-button{
-    width: 5em;
-    height: 5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 7em;
+    height: 8em;
     border: none;
-    background-color: transparent;
+    background-color: var(--cor2);
+    border-radius: 1em;
     cursor: pointer;
 }
 
 #prev-button img, #next-button img{
-    width: 100%;
-    height: 100%;
+    width: 5em;
+    height: 5em;
 }
 
 #prev-button{
