--- a/public/main.css
+++ b/public/main.css
@@ -160,7 +160,35 @@ body{
 }
 
 .quad{
-    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.quad img{
+    height: 45%;
+    width: 45%;
+    margin-left: -6em;
+}
+
+.quad .infofo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 65%;
+    width: 50%;
+
+}
+
+.quad .infofo h1{
+    font-size: 4.7em;
+}
+
+.quad .infofo h3{
+    font-size: 1.7em;
 }
 
 #prev-button, #next-button{
