--- a/pages/alimentos/main.css
+++ b/pages/alimentos/main.css
@@ -6,7 +6,7 @@ font-family: 'Roboto', sans-serif; */
     --branco:#fff;
     --preto:#000;
     --contraste:#b8b8b8;
-    --base1:rgb(40, 170, 98);
+    --cor1:rgb(40, 170, 98);
     --base2:rgb(5, 155, 165);
 }
 *{
@@ -19,4 +19,202 @@ html,body{
     overflow-x:hidden;
     width: 100vw;
     height: 100vh;
+}
+
+body{
+    background-image: url(../../public/resources/assets/FundoSocial.png);
+}
+
+.menu{
+    background: var(--base2);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+    z-index: 1;
+    position: sticky;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height:10vh;
+    background: linear-gradient(30deg,var(--cor1), var(--base2));
+}
+
+#btnmenu{
+    transition: 100ms;
+    margin: 0 20px 0 20px;
+    display: flex;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    font-size: 30px;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+#btnmenu:hover{
+    cursor: pointer;
+    box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+    font-size: 35px;
+}
+
+.leftside{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 33%;
+    height: 100%;
+    align-items: center;
+}
+
+.leftside nav{
+    display: flex;
+    justify-content: space-around;
+    padding: 0.5%;
+    align-items: center;
+    background: white;
+    width: 85%;
+    border-radius: 25px;
+}
+
+.leftside nav div{
+    cursor: pointer;
+    user-select: none;
+    transition: 500ms;
+    padding: 10px;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    width: 70px;
+    color: black;
+    background: linear-gradient(70deg,var(--base2), var(--cor1));
+}
+
+.leftside nav div:hover{
+    width: 160px;
+}
+
+.leftside nav div i{
+    font-size: 50px;
+}
+
+.leftside nav div span{
+    margin-left: 10px;
+}
+
+.leftside.ativo{
+    justify-content: flex-end;
+}
+
+.midside{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 33%;
+    height: 100%;
+}
+
+.rightside{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    width: 33%;
+    height: 100%;
+}
+
+.rightside > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-weight: bold;
+}
+
+.rightside > div span{
+    padding: 3px;
+}
+
+/* Screens da pagina */
+
+.screen1{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+    height: 90vh;
+    background-color: red;
+}
+
+#container img{
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: 0.25s;
+}
+
+#container #on{
+    opacity: 1;
+}
+
+.text{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    height: 95%;
+    background-color: var(--cor1);
+    border-radius: 3em;
+    padding: 4%;
+    font-size: 2.5em;
+}
+
+.doencas1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--cor1);
+}
+
+.doencas2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--base2);
+}
+
+.doencas1 h1{
+    font-size: 4em;
+}
+
+.doencas1 p{
+    font-size: 2em;
+    text-align: center;
+}
+
+.doencas1 img{
+    background-color: red;
+    width: 45%;
+    height: 45%;
+}
+
+.doencas2 h1{
+    font-size: 4em;
+}
+
+.doencas2 p{
+    font-size: 2em;
+    text-align: center;
+}
+
+.doencas2 img{
+    background-color: red;
+    width: 45%;
+    height: 45%;
 }
